--- a/index.html
+++ b/index.html
@@ -150,24 +150,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Conciencia Consultores</h3>
+            <div class="subheading mb-3">Diploma</div>            
+            <p>NLP Master Practitiones Certificate</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">February - December 2018</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Insituto Tecnológico de León (TECNM)</h3>
+            <div class="subheading mb-3">Computer Systems Engineer</div>
+            <p>ISC (Degree in process)</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2011 - June 2017</span>
+          </div>
+        </div>
+
+		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">TECNM</h3>
+            <div class="subheading mb-3">Degree in Entrepreneurship and Management</div>
+            <p>Participated in the ‘Gamification - Hack Bajío’ contest realized by ITESM</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September - November 2015</span>
           </div>
         </div>
 
@@ -192,32 +202,20 @@
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <i class="fab fa-java"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i class="fab fa-android"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+            <i class="fab fa-linux"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
+            <i class="fab fa-sql"></i>
+          </li>                    
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
+            <i class="fab fa-windows"></i>
+          </li>          
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
