--- a/index.html
+++ b/index.html
@@ -191,16 +191,7 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
+        <ul class="list-inline dev-icons">                    
           <li class="list-inline-item">
             <i class="fab fa-java"></i>
           </li>
@@ -211,11 +202,20 @@
             <i class="fab fa-linux"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sql"></i>
-          </li>                    
+            <i class="fab fa-js-square"></i>
+          </li>                             
           <li class="list-inline-item">
             <i class="fab fa-windows"></i>
-          </li>          
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-html"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-css3-"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-cisco"></i>
+          </li>
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
