--- a/index.html
+++ b/index.html
@@ -200,21 +200,21 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-linux"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>                             
+          </li>                                  
           <li class="list-inline-item">
             <i class="fab fa-windows"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-html"></i>
+            <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-"></i>
+            <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-cisco"></i>
+            <i class="fab fa-css"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-sql"></i>
           </li>
         </ul>
 
