--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css"></i>
+            <i class="fab fa-css3"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-sql"></i>
