--- a/index.html
+++ b/index.html
@@ -211,27 +211,24 @@
             <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3"></i>
+            <i class="fab fa-css3-alt"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-sql"></i>
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Aditional experience</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            WS 2008/2012 management and configuration.</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Relational database design with SQL Management Studio and aplying BI</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Management, configuration and implementation of Linux Server for STF (Smartphone Test Farm) software with creation of some automated test on Maven &and; Appium</li>          
         </ul>
       </div>
     </section>
