--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             Relational database design with SQL Management Studio and aplying BI</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Management, configuration and implementation of Linux Server for STF (Smartphone Test Farm) software with creation of some automated test on Maven &and; Appium</li>          
+            Management, configuration and implementation of Linux Server for STF (Smartphone Test Farm) software with creation of some automated test on Maven & Appium</li>          
         </ul>
       </div>
     </section>
