--- a/index.html
+++ b/index.html
@@ -218,17 +218,20 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Aditional experience</div>
+        <div class="subheading mb-3">Aditional</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
             WS 2008/2012 management and configuration.</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Relational database design with SQL Management Studio and aplying BI</li>
+            Relational database design with SQL Management Studio and aplying BI.</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Management, configuration and implementation of Linux Server for STF (Smartphone Test Farm) software with creation of some automated test on Maven & Appium</li>          
+            Management, configuration and implementation of Linux Server for STF (Smartphone Test Farm) software with creation of some automated test on Maven & Appium.</li>          
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cisco CCNA full (4 Certifications) on IP Adressing & Subnetting · Network Security with VPN, SSH, SSL · OSPF & EIGRP Routing Protocols · STP & VLAN · Troubleshooting</li>
         </ul>
       </div>
     </section>
