--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             Management, configuration and implementation of Linux Server for STF (Smartphone Test Farm) software with creation of some automated test on Maven & Appium.</li>          
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cisco CCNA full (4 Certifications) on IP Adressing & Subnetting · Network Security with VPN, SSH, SSL · OSPF & EIGRP Routing Protocols · STP & VLAN · Troubleshooting</li>
+            Cisco CCNA full (4 Certifications) on IP Adressing & Subnetting · Network Security · Routing Protocols · Troubleshooting</li>
         </ul>
       </div>
     </section>
