--- a/index.html
+++ b/index.html
@@ -70,15 +70,12 @@
           <a href="mailto:ricardo_valtierra@outlook.com">ricardo_valtierra@outlook.com</a>
         </div>
         <p class="lead mb-5">Experencied within technological systems of information, database design and deploy, dinamic web design, desktop & android development. Deployment and management of system or aplication software with emerging technologies.</p>
-        <div class="social-icons">
-          <a href="#">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
+        <div class="social-icons">          
           <a href="#">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-mail-forward"></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
@@ -241,7 +238,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+        <p>Besides my carreer development, I enjoy spending my time on some other activities and projects. Investigation and reading about diversal topics like general culture, science and self-improvement is one of my preferred activities along my free time. I like to practice some sports like jogging, basketball and anaerobic excersice
+        In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
     </section>
