--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Resume - Ricardo Valtierra</title>
 
-  <!-- Bootstrap core -->
+  <!-- BC CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   
   <!-- Icon -->
@@ -284,14 +284,14 @@
 
   </div>
 
-  <!-- Bootstrap core JavaScript -->
+  <!-- BC JS -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Plugin JavaScript -->
+  <!-- Plugin JS -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for this template -->
+  <!-- Scripts -->
   <script src="js/resume.min.js"></script>
 
 </body>
