--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   
   <!-- Icon -->
-  <link rel="icon" type="image" href="code.png">
+  <link rel="icon" type="image" href="itleon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
