--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
-            <i class="fab fa-mail-forward"></i>
+            <i class="fab fa-envelope-o"></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
