--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   
   <!-- Icon -->
-  <link rel="icon" type="image" href="itleon.png">
+  <link rel="icon" type="image" href="img/code.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
@@ -78,7 +78,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
-            <i class="fab fa-envelope-o"></i>
+            <i class="fab fa-instagram"></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
