--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Conciencia Consultores</h3>
+            <h3 class="mb-0">Consciencia Consultores</h3>
             <div class="subheading mb-3">Diploma</div>            
-            <p>NLP Master Practitiones Certificate</p>
+            <p>NLP Master Practitioner Certificate</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">February - December 2018</span>
@@ -242,45 +242,11 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>Besides my carreer development, I enjoy spending my time on some other activities and projects. Investigation and reading about diversal topics like general culture, science and self-improvement is one of my preferred activities along my free time. I like to practice some sports like jogging, basketball and anaerobic excersice.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p class="mb-0">In entretainment, I follow a number of comedy and culture genre movies and television shows, I am an aspiring meditator, and I spend the rest of my free time exploring on software engineering</p>
       </div>
     </section>
 
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
-      <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
-      </div>
-    </section>
+    <hr class="m-0">   
 
   </div>
 
