--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
           <a href="#">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="instagram.com/ricardo.abrahamv">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="#">
+          <a href="facebook.com/ricardo.valtierra.r">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
