--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
           <a href="#">
             <i class="fab fa-github"></i>
           </a>
-          <a href="instagram.com/ricardo.abrahamv">
+          <a href="http://instagram.com/ricardo.abrahamv">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="facebook.com/ricardo.valtierra.r">
+          <a href="http://facebook.com/ricardo.valtierra.r">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -239,7 +239,7 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>Besides my carreer development, I enjoy spending my time on some other activities and projects. Investigation and reading about diversal topics like general culture, science and self-improvement is one of my preferred activities along my free time. I like to practice some sports like jogging, basketball and anaerobic excersice.</p>
-        <p class="mb-0">In entretainment, I follow a number of comedy and culture genre movies and television shows, I am an aspiring meditator, and I spend the rest of my free time exploring on software engineering</p>
+        <p class="mb-0">In entretainment, I follow a number of comedy and culture genre movies and television shows, I am an aspiring meditator, and I spend the rest of my free time exploring on software engineering.</p>
       </div>
     </section>
 
