--- a/index.html
+++ b/index.html
@@ -73,12 +73,9 @@
         <div class="social-icons">          
           <a href="#">
             <i class="fab fa-github"></i>
-          </a>
-          <a href="http://instagram.com/ricardo.abrahamv">
-            <i class="fab fa-instagram"></i>
-          </a>
+          </a>          
           <a href="http://facebook.com/ricardo.valtierra.r">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-envelope-open-o"></i>
           </a>
         </div>
       </div>
@@ -238,7 +235,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Besides my carreer development, I enjoy spending my time on some other activities and projects. Investigation and reading about diversal topics like general culture, science and self-improvement is one of my preferred activities along my free time. I like to practice some sports like jogging, basketball and anaerobic excersice.</p>
+        <p>Besides my carreer development, I enjoy spending my time on some other activities and projects. Investigation and reading about diversal topics like general culture, science and self-improvement are some of my preferred activities along my free time. I like to practice some sports like jogging, basketball and anaerobic excersice.</p>
         <p class="mb-0">In entretainment, I follow a number of comedy and culture genre movies and television shows, I am an aspiring meditator, and I spend the rest of my free time exploring on software engineering.</p>
       </div>
     </section>
