--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <i class="fab fa-github"></i>
           </a>          
           <a href="http://facebook.com/ricardo.valtierra.r">
-            <i class="fab fa-envelope-open-o"></i>
+            <i class="fab fa-envelope-o"></i>
           </a>
         </div>
       </div>
