--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="#">
             <i class="fab fa-github"></i>
           </a>          
-          <a href="http://facebook.com/ricardo.valtierra.r">
+          <a href="mailto:ricardo_valtierra@outlook.com">
             <i class="fab fa-envelope-o"></i>
           </a>
         </div>
