--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <p class="lead mb-5">Experencied within technological systems of information, database design and deploy, dinamic web design, desktop & android development. Deployment and management of system or aplication software with emerging technologies.</p>
         <div class="social-icons">          
-          <a href="#">
+          <a href="https://github.com/ricardovaltierra">
             <i class="fab fa-github"></i>
           </a>          
           <a href="mailto:ricardo_valtierra@outlook.com">
