--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <a href="https://github.com/ricardovaltierra">
             <i class="fab fa-github"></i>
           </a>          
-          <a href="mailto:ricardo_valtierra@outlook.com">
-            <i class="fab fa-envelope-o"></i>
+          <a href="mailto:ricardo_valtierra@outlook.com">          	
+            <i class="far fa-envelope-open"></i>
           </a>
         </div>
       </div>
@@ -155,7 +155,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Insituto Tecnológico de León (TECNM)</h3>
+            <h3 class="mb-0">Instituto Tecnológico de León (TECNM)</h3>
             <div class="subheading mb-3">Computer Systems Engineer</div>
             <p>ISC (Degree in process)</p>
           </div>
