--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="icon" type="image" href="img/code.png">
 
   <!-- Fonts -->
+  <script src="https://kit.fontawesome.com/70310fb349.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
