--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>        
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#github-repositories">Portfolio</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -124,7 +127,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Graphic Designer</h3>
+            <h3 class="mb-0">Graphic designer</h3>
             <div class="subheading mb-3">LEO Articulos Publicitarios</div>
             <p>Graphic Design for physical printed media · Development and design of presentations and communication elements for events · Collaboration with creative team for requirement analysis</p>
           </div>
@@ -242,6 +245,40 @@
     </section>
 
     <hr class="m-0">   
+
+	<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="github-repositories">
+      <div class="w-100">
+        <h2 class="mb-5">Portfolio</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Google Analytics Certified Developer</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Mobile Web Specialist - Google Certification</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            2<sup>nd</sup>
+            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - James Buchanan High School - Hackathon 2006</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            3<sup>rd</sup>
+            Place - James Buchanan High School - Hackathon 2005</li>
+        </ul>
+      </div>
+    </section>
 
   </div>
 
