--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
         <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
+          <li>          	
+            <i class="fa-li fas fa-code text-warning"></i>
             Google Analytics Certified Developer</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
