--- a/index.html
+++ b/index.html
@@ -254,28 +254,17 @@
             <i class="fa-li fas fa-code text-warning"></i>
             Google Analytics Certified Developer</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/LoginRestApi">Login Rest API Android</a></li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/MyNotes">Login and Registration (MySQL, OkHttp API)</a></li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/UNIVERSIDAD_TECNOLOGICA">Administration system for Technological University</a></li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/MailAplication">JSP Mail Aplication</a></li>                    
         </ul>
       </div>
     </section>
