--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <a href="https://github.com/ricardovaltierra/MyNotes">Login and Registration (MySQL, OkHttp API)</a></li>
           <li>
             <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/UNIVERSIDAD_TECNOLOGICA">Administration system for Technological University</a></li>
+            <a href="https://github.com/ricardovaltierra/UNIVERSIDAD_TECNOLOGICA">Administration System for Technological University</a></li>
           <li>
             <i class="fa-li fas fa-code text-warning"></i>
             <a href="https://github.com/ricardovaltierra/MailAplication">JSP Mail Aplication</a></li>                    
