--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Administrative & Technician Assistant</h3>
             <div class="subheading mb-3">Grupo Gol S.A. de C.V.</div>
-            <p>Solution and advice on TI issues · Support in file and administrative · Surveillance equipment management & control</p>
+            <p>Solution and advice on IT issues · Support in file and administrative · Surveillance equipment management & control</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2011 - April 2011</span>
