--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Ricardo Valtierra</title>
+  <title>Ricardo Valtierra | Portfolio</title>
 
   <!-- BC CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,6 +45,9 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
@@ -56,9 +59,6 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>        
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#github-repositories">Portfolio</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -70,16 +70,27 @@
         <h1 class="mb-0">RICARDO
           <span class="text-primary">VALTIERRA</span>
         </h1>
-        <div class="subheading mb-5">Granito 233 - A · Azteca, CP 37520 · (477) 677-7394 ·
+        <div class="subheading mb-5">Full-Stack Web Developer
+          <br> +52 477 677 7394
+          <br>
           <a href="mailto:ricardo_valtierra@outlook.com">ricardo_valtierra@outlook.com</a>
         </div>
         <p class="lead mb-5">Experencied within technological systems of information, database design and deploy, dinamic web design, desktop & android development. Deployment and management of system or aplication software with emerging technologies.</p>
-        <div class="social-icons">          
+        <div class="social-icons">
+          <a href="http://www.linkedin.com/in/ricardovaltierra">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
           <a href="https://github.com/ricardovaltierra">
             <i class="fab fa-github"></i>
-          </a>          
+          </a>
           <a href="mailto:ricardo_valtierra@outlook.com">          	
             <i class="far fa-envelope-open"></i>
+          </a>
+          <a href="mailto:ricardo_valtierra@outlook.com">          	
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="mailto:ricardo_valtierra@outlook.com">          	
+            <i class="fab fa-whatsapp"></i>
           </a>
         </div>
       </div>
@@ -246,7 +257,7 @@
 
     <hr class="m-0">   
 
-	<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="github-repositories">
+	<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
         <ul class="fa-ul mb-0">          
