Experience section edited

--- a/index.html
+++ b/index.html
@@ -98,54 +98,60 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
+      <div class="w-100">
+        <h2 class="mb-5">Portfolio</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/kilometers-per-truck">Trucking</a></li>
+          <li>
+          <li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/using-bootstrap">NewsWeek</a></li>
+          <li>
+          <li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/task-app">Task App</a></li>
+          <li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/sample_app">Sample App</a></li>
+          <li>
+            <i class="fa-li fas fa-code text-warning"></i>
+            <a href="https://github.com/ricardovaltierra/Building-with-Backgrounds-and-Gradients">Apple Page</a></li>          
+        </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Real estate advisor - Community Manager
+            <h3 class="mb-0">Mentor (Volunteer)
             </h3>
-            <div class="subheading mb-3">Abundia Servicios Inmobiliarios</div>
-            <p>Direct contact with the customer · Negotiation and sales closure · Development and implementation of content for market attraction through web media · Administration processes and electronic billing</p>
+            <div class="subheading mb-3">Microverse</div>
+            <p>Mentoring students on learning on day to day assessments during the program, providing support to solve conflicts and feedback in activities.</p>            
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2018 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Hardware & Software Technician</h3>
-            <div class="subheading mb-3">Individual</div>
-            <p>Maintenance and Repair Technician Computer · Linux & Windows SO Management · Preventive & Corrective maintenance · TI solutions implementation</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2016 - May 2018</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Administrative & Technician Assistant</h3>
-            <div class="subheading mb-3">Grupo Gol S.A. de C.V.</div>
-            <p>Solution and advice on IT issues · Support in file and administrative · Surveillance equipment management & control</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - April 2011</span>
+            <span class="text-primary">Feb 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Graphic designer</h3>
-            <div class="subheading mb-3">LEO Articulos Publicitarios</div>
-            <p>Graphic Design for physical printed media · Development and design of presentations and communication elements for events · Collaboration with creative team for requirement analysis</p>
+            <h3 class="mb-0">Real estate advisor - Community Manager
+            </h3>
+            <div class="subheading mb-3">Abundia Real State Servi</div>
+            <p>Direct contact with the customer · Negotiation and sales closure · Development and implementation of content for market attraction through web media · Administration processes and electronic billing</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2002 - December 2003</span>
+            <span class="text-primary">May 2018 - Present</span>
           </div>
-        </div>
+        </div>        
 
       </div>
 
@@ -156,6 +162,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Microverse</h3>
+            <div class="subheading mb-3">Diploma</div>
+            <p>Remote Full Stack Web Development Program, Full Time</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2019 - Present</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -170,7 +187,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Instituto Tecnológico de León (TECNM)</h3>
+            <h3 class="mb-0">Tecnológico Nacional De México (ITL)</h3>
             <div class="subheading mb-3">Computer Systems Engineer</div>
             <p>ISC (Degree in process)</p>
           </div>
@@ -179,7 +196,7 @@
           </div>
         </div>
 
-		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+		    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">TECNM</h3>
             <div class="subheading mb-3">Degree in Entrepreneurship and Management</div>
@@ -252,28 +269,6 @@
         <h2 class="mb-5">Interests</h2>
         <p>Besides my carreer development, I enjoy spending my time on some other activities and projects. Investigation and reading about diversal topics like general culture, science and self-improvement are some of my preferred activities along my free time. I like to practice some sports like jogging, basketball and anaerobic excersice.</p>
         <p class="mb-0">In entretainment, I follow a number of comedy and culture genre movies and television shows, I am an aspiring meditator, and I spend the rest of my free time exploring on software engineering.</p>
-      </div>
-    </section>
-
-    <hr class="m-0">   
-
-	<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
-      <div class="w-100">
-        <h2 class="mb-5">Portfolio</h2>
-        <ul class="fa-ul mb-0">          
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/LoginRestApi">Login Rest API Android</a></li>
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/MyNotes">Login and Registration (MySQL, OkHttp API)</a></li>
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/UNIVERSIDAD_TECNOLOGICA">Administration System for Technological University</a></li>
-          <li>
-            <i class="fa-li fas fa-code text-warning"></i>
-            <a href="https://github.com/ricardovaltierra/MailAplication">JSP Mail Aplication</a></li>                    
-        </ul>
       </div>
     </section>
 
