--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/font-mfizz-2.4.1/font-mfizz.css">
+
 
   <!-- Styles -->
   <link href="css/resume.min.css" rel="stylesheet">
@@ -216,48 +218,80 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">                    
+        <div class="subheading mb-3">Front-End</div>
+        <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i class="fab fa-java"></i>
+            <i class="fab fa-react"></i>
+          </li>          
+          <li class="list-inline-item">
+            <i class="fab fa-sass"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-android"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-linux"></i>
-          </li>                                  
-          <li class="list-inline-item">
-            <i class="fab fa-windows"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
+            <i class="fab fa-bootstrap"></i>
+          </li>          
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-css3-alt"></i>
+          </li>          
+        </ul>
+
+        <div class="subheading mb-3">Back-End</div>
+        <ul class="list-inline dev-icons">                    
+          <li class="list-inline-item">
+            <i class="fab fa-java"></i>
+          </li>
+          <li class="list-inline-item">            
+            <i class="icon-ruby"></i> 
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sql"></i>
+            <i class="icon-ruby-on-rails"></i>
+          </li>                                  
+          <li class="list-inline-item">            
+            <i class="icon-postgres-alt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-js-square"></i>
+          </li>
+          <li class="list-inline-item">            
+            <i class="icon-database"></i>
+          </li>
+          <li class="list-inline-item">            
+            <i class="icon-mysql"></i>
+          </li>          
+        </ul>
+
+        <div class="subheading mb-3">Tools & Methods</div>
+        <ul class="list-inline dev-icons">                    
+          <li class="list-inline-item">            
+            <i class="icon-git"></i>
+          </li>
+          <li class="list-inline-item">            
+            <i class="icon-docker"></i>
+          </li>
+          <li class="list-inline-item">            
+            <i class="icon-npm"></i>
+          </li>          
+          <li class="list-inline-item">            
+            <i class="icon-heroku"></i>
+          </li>          
+          <li class="list-inline-item">
+            <i class="fab fa-linux"></i>
           </li>
         </ul>
 
-        <div class="subheading mb-3">Aditional</div>
+        <div class="subheading mb-3">Professional</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check"></i>
-            WS 2008/2012 management and configuration.</li>
+            <i class="fa-li fa fa-check"></i>            
+            Remote re-pair programming</li>                      
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Relational database design with SQL Management Studio and aplying BI.</li>
+            <i class="fa-li fa fa-check"></i>            
+            Teamwork</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Management, configuration and implementation of Linux Server for STF (Smartphone Test Farm) software with creation of some automated test on Maven & Appium.</li>          
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cisco CCNA full (4 Certifications) on IP Adressing & Subnetting · Network Security · Routing Protocols · Troubleshooting</li>
+            <i class="fa-li fa fa-check"></i>            
+            Mentoring</li>
         </ul>
       </div>
     </section>
